# deep-learning-from-scratch

./: .gitignore
book-4/: pyproject.toml
book-4/01_bandit/: bandit.py  bandit_avg.py  bandit_change_epsilons.py  bayesian_ucb.py  non_sationary.py  rates_comparison.py  softmax.py  ten_bandits.py  thompson_sampling.py  ucb1.py
book-4/04_dp/: _renderer.py  dp.py  dp_100iter.py  dp_inplace.py  gridworld.py  gridworld_play.py  policy_eval.py  policy_iter.py  value_iter.py
book-4/04_dp/figures/: make_gif.py
book-4/05_montecarlo/: gridworld.py  importance_sampling.py  mc_control.py  mc_control_offpolicy.py  mc_eval.py
book-4/06_td/: q_learning.py  q_learning_simple.py  sarsa.py  sarsa_offpolicy.py  td_eval.py
book-4/07_neural_network/: dezero1.py  dezero2.py  dezero3.py  dezero4.py  dezero5.py  q_learning_nn.py
book-4/08_dqn/: dqn.py  gym_play.py  pong.py  pong_dqn.py  replay_buffer.py
book-4/09_policy_gradient/: actor_critic.py  reinforce.py  simple_pg.py
