[tool.poetry]
name = "book-4"
version = "0.1.0"
description = ""
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "3.8.*"
numpy = "^1.23.1"
matplotlib = "^3.5.3"
scipy = "^1.9.0"
tqdm = "^4.64.0"
dezero = "^0.0.13"
gym = {extras = ["classic_control", "accept-rom-license", "atari"], version = "^0.25.2"}
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
